gomplate/envoy-config.yaml
static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 127.0.0.1
            port_value: 8443
        filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  certificate_chain:
                    filename: /certs/server-cert/server-cert.pem
                  private_key:
                    filename: /certs/server-key/server-key.pem
          filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              access_log:
              - name: envoy.access_loggers.stdout
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: route_config
                virtual_hosts:
                - name: server_virtual_hosts
                  domains:
                    - "*"
                  routes:
                  - match:
                      prefix: "/server1/"
                    route:
                      prefix_rewrite: "/"
                      cluster: server_1
                  - match:
                      prefix: "/server2/"
                    route:
                      prefix_rewrite: "/"
                      cluster: server_2
      - name: listener_1
        address:
          socket_address:
            address: 127.0.0.1
            port_value: 8080
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              access_log:
              - name: envoy.access_loggers.stdout
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: route_config
                virtual_hosts:
                - name: server_virtual_hosts
                  domains:
                    - "*"
                  routes:
                  - match:
                      prefix: "/server1/"
                    route:
                      prefix_rewrite: "/"
                      cluster: server_1
                  - match:
                      prefix: "/server2/"
                    route:
                      prefix_rewrite: "/"
                      cluster: server_2
      clusters:
        - name: server_1
          type: STRICT_DNS
          connect_timeout: 500s
          max_requests_per_connection: 1
          load_assignment:
            cluster_name: server_1
            endpoints:
              - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 8081
        - name: server_2
          type: STRICT_DNS
          connect_timeout: 500s
          max_requests_per_connection: 1
          load_assignment:
            cluster_name: server_2
            endpoints:
              - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 8082
